--- a/config/eyelash_sofle.conf
+++ b/config/eyelash_sofle.conf
@@ -21,3 +21,4 @@ CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=8
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=8
+CONFIG_BT_CTLR_PHY_2M=n
